fix overflow mobile

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -18,9 +18,11 @@ body {
 }
 /* sticky footer */
 
-html {
+html,
+body {
   overflow-x: hidden;
 }
+
 .jumbotron {
   background: $white;
 
